# OpenCV_Lern

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ImageModule/: image_module.h
test/: test_wideo.webm
